--- a/client/src/component/Login/LoginPage.css
+++ b/client/src/component/Login/LoginPage.css
@@ -1,47 +1,219 @@
-.header{
-    position: sticky;
-    z-index: 20;
-    padding: 12px;
-    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 10px;
+.header {
+  position: sticky;
+  display: flex;
+  align-items: center;
+  z-index: 20;
+  padding: 12px;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 10px;
+  width: 100%;
 }
 
 .logo {
-    width: 154px;
+  width: 154px;
 }
 
-.content{
-    display: flex;
-    /* justify-content: ; */
-    align-items: center;
-}
-/* 
-.content-left{
-    border: 2px solid black;
-} */
-
-.content-left-logo{
-    padding: 10px;
-    width: 100%;
+.content {
+  display: flex;
+  align-items: center;
 }
 
-.content-left h1{
-    font-size: 55px;
-    line-height: 120%;
-    font-family: "Poppins", sans-serif;
-    font-weight: 600;
-    color: black;
-    margin-bottom: 27px;
+.content-left-logo {
+  padding: 10px;
+  width: 100%;
 }
 
-.content-left p{
-    font-family: "Plus Jakarta Sans", sans-serif;
-    font-weight: 400;
-    font-size: 21px;
-    line-height: 28px;
-    color: #000;
+.content-left h1 {
+  font-size: 55px;
+  line-height: 120%;
+  font-family: "Poppins", sans-serif;
+  font-weight: 600;
+  color: black;
+  margin-bottom: 27px;
 }
 
-.content-right{
-    height: vh;
+.content-left p {
+  width: 40.5rem;
 }
-  
+
+.content-left p {
+  font-family: "Plus Jakarta Sans", sans-serif;
+  font-weight: 400;
+  font-size: 21px;
+  line-height: 28px;
+  color: #000;
+}
+
+.login-right {
+  border-radius: 10px;
+  position: relative;
+  /* top: 40px; */
+  padding: -40px;
+  width: 40rem;
+  height: 75vh;
+  box-shadow: 0px 0px 18px rgba(0, 0, 0, 0.15);
+}
+
+.signup-form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+}
+
+.signup-form h2 {
+  /* border: 2px solid yellow; */
+  padding: 15px;
+  text-align: center;
+}
+
+
+.title {
+  color: orange;
+}
+
+.form-group {
+  /* border: 2px solid black; */
+  display: flex;
+  flex-direction: column;
+  padding: 15px;
+}
+
+.label {
+  display: block;
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 18px;
+  color: #000;
+  margin-bottom: 10px;
+}
+
+.input {
+  width: 100%;
+  padding: 10px 45px 10px 23px;
+  border: 1px solid #cdd5e2;
+  border-radius: 8px;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
+  font-weight: 300;
+  font-size: 12px;
+  line-height: 18px;
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  background-color: #ffffff;
+  padding: 30px;
+  width: 450px;
+  border-radius: 20px;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
+::placeholder {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
+.form button {
+  align-self: flex-end;
+}
+
+.flex-column > label {
+  color: #151717;
+  font-weight: 600;
+}
+
+.inputForm {
+  border: 1.5px solid #ecedec;
+  border-radius: 10px;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  padding-left: 10px;
+  transition: 0.2s ease-in-out;
+}
+
+.input {
+  margin-left: 10px;
+  border-radius: 10px;
+  border: none;
+  width: 85%;
+  height: 100%;
+}
+
+.input:focus {
+  outline: none;
+}
+
+.inputForm:focus-within {
+  border: 1.5px solid #2d79f3;
+}
+
+.flex-row {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 10px;
+  justify-content: space-between;
+}
+
+.flex-row > div > label {
+  font-size: 14px;
+  color: black;
+  font-weight: 400;
+}
+
+.span {
+  font-size: 14px;
+  margin-left: 5px;
+  color: #2d79f3;
+  font-weight: 500;
+  cursor: pointer;
+}
+
+.button-submit {
+  margin: 20px 0 10px 0;
+  background-color: #151717;
+  border: none;
+  color: white;
+  font-size: 15px;
+  font-weight: 500;
+  border-radius: 10px;
+  height: 50px;
+  width: 100%;
+  cursor: pointer;
+}
+
+.button-submit:hover {
+  background-color: #252727;
+}
+
+.p {
+  text-align: center;
+  color: black;
+  font-size: 14px;
+  margin: 5px 0;
+}
+
+.btn {
+  margin-top: 10px;
+  width: 100%;
+  height: 50px;
+  border-radius: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: 500;
+  gap: 10px;
+  border: 1px solid #ededef;
+  background-color: white;
+  cursor: pointer;
+  transition: 0.2s ease-in-out;
+}
+
+.btn:hover {
+  border: 1px solid #2d79f3;
+}
