--- a/client/src/component/LandingPage.css
+++ b/client/src/component/LandingPage.css
@@ -321,13 +321,22 @@ body {
   background-color: yellow;
   height: 81.7vh;
   position: fixed;
-  z-index: 10;
 }
 
 .close-div{
   position: absolute;
   right: 25px;
   top: 0;
+}
+
+.dashboard-menu{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 100;
+  
+  height: 100vh;
 }
 
 
