--- a/client/src/component/Login/LoginPage.css
+++ b/client/src/component/Login/LoginPage.css
@@ -42,6 +42,12 @@
   font-size: 40px;
 }
 
+.login-right{
+  /* border: 2px solid red; */
+  display: flex;
+  width: fixed;
+}
+
 .signup-form {
   /* border: 2px solid rebeccapurple; */
   border-radius: 15px;
@@ -92,12 +98,13 @@
 }
 
 .form {
+  /* border: 2px solid salmon; */
   display: flex;
   flex-direction: column;
   gap: 10px;
   background-color: #ffffff;
   padding: 30px;
-  width: 450px;
+  width: 30rem;
   border-radius: 20px;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
