--- a/client/src/component/CreateResume/CreateResume.css
+++ b/client/src/component/CreateResume/CreateResume.css
@@ -1,7 +1,15 @@
 .create-res-div{
     display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+
+.create-res{
+    display: flex;
     width: 90vw;
     height: 100vh;
-    
+    padding: 15px;
+    /* justify-content: space-between; */
 }
 
