changes done to fetch the api images in frontend

--- a/client/src/component/LandingPage.css
+++ b/client/src/component/LandingPage.css
@@ -168,9 +168,31 @@ body {
   flex-direction: column;
 }
 
+
+.feature-p{
+  font-size: clamp(15px, 3.8vw, 25px);
+  padding-top: 10px;
+}
+
+.feature-heading {
+  display: flex;
+  justify-content: space-between;
+  gap: 7px;
+  align-items: center;
+  flex-direction: column;
+  padding-top: 10px;
+}
+
+
+.features-img{
+  height: 10vh;
+}
+
 .feature-heading h2 {
-  font-size: clamp(28px, 3.8vw, 55px); 
-  font-weight: 540;
+  font-size: clamp(25px, 3.8vw, 55px); 
+  font-size: 40px;
+  font-weight: 500;
+  line-height: 50px;
 }
 
 .features-heading {
@@ -194,11 +216,10 @@ body {
   height: auto; 
   padding: 30px;
   display: flex;
-  justify-content: space-evenly;
+  /* justify-content: start; */
   flex-direction: column;
-  align-items: center;
+  /* align-items: center; */
   text-align: center;
-  border: 2px solid salmon;
   border-radius: 10px;
 }
 
@@ -290,7 +311,7 @@ body {
 
 .examples {
   margin: 20px;
-  border: 2px solid black;
+  /* border: 2px solid black; */
   padding: 30px;
   display: grid;
   gap: 40px;
@@ -300,9 +321,15 @@ body {
 .example {
   border: 2px solid salmon;
   height: 70vh; /*should change the height to auto afterwards once i got the API */
+  padding: 10px;
   border-radius: 10px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   transition: transform 0.3s ease-in-out;
+}
+
+.example img{
+  height: 65vh;
+  width: 25vw;
 }
 
 .example:hover {
