added backtoTop btn

--- a/client/src/component/LandingPage.css
+++ b/client/src/component/LandingPage.css
@@ -223,6 +223,8 @@ body {
   border-radius: 10px;
 }
 
+/* Splide Slider Styles */
+
 .splide-div {
   display: flex;
   align-items: center;
@@ -231,25 +233,35 @@ body {
 }
 
 .splide-heading {
-  font-size: clamp(28px, 3.8vw, 55px); 
+  font-size: clamp(28px, 3.8vw, 55px);
   font-weight: light;
   text-align: center;
+  margin-bottom: 30px; /* Add some margin for spacing */
 }
 
 .splide {
+  display: flex;
   padding: 20px 0;
   width: 100%;
+  /* overflow: hidden; Ensure overflow is hidden */
+}
+
+.splide-img-div{
+  border: 2px solid black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 10vw;
+  height: 10vh;
 }
 
 .splide__slide {
-  border: 2px solid slateblue;
   height: 30rem;
   display: block;
   border-radius: 8px;
   transition: transform 400ms;
   transform: scale(0.85);
   transform-origin: center center;
-  transition: ease-in-out 0.3s;
 }
 
 .splide__slide p {
@@ -258,7 +270,6 @@ body {
 
 .splide__slide.is-active {
   transform: scale(1);
-  transition: cubic-bezier(0.075, 0.82, 0.165, 1);
 }
 
 .splide .splide__arrow {
@@ -300,8 +311,9 @@ body {
 }
 
 .splide__pagination__page.is-active {
-  background-color: black;
+  background-color: salmon; /* Adjust active page color */
 }
+
 
 .example-heading {
   font-size: clamp(28px, 3.8vw, 55px); /* Updated for dynamic resizing */
@@ -365,6 +377,27 @@ body {
   
   height: 100vh;
 }
+
+.back-to-top-btn {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
+
+.arrow-icon {
+  font-size: 30px;
+}
+
 
 
 @media (max-width: 1024px){
