--- a/client/src/component/LandingPage.css
+++ b/client/src/component/LandingPage.css
@@ -379,23 +379,62 @@ body {
 }
 
 .back-to-top-btn {
-  position: fixed;
-  bottom: 20px;
-  right: 20px;
-  background-color: #007bff;
-  color: #fff;
-  border: none;
-  border-radius: 50%;
   width: 50px;
   height: 50px;
+  border-radius: 50%;
+  background-color: rgb(20, 20, 20);
+  border: none;
+  font-weight: 600;
   display: flex;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
+  box-shadow: 0px 0px 0px 4px rgba(180, 160, 255, 0.253);
   cursor: pointer;
+  transition-duration: 0.3s;
+  overflow: hidden;
+  position: fixed; /* Ensure it stays fixed at the bottom right */
+  bottom: 20px; /* Adjust this value to position it vertically */
+  right: 20px; /* Adjust this value to position it horizontally */
+  z-index: 1000; /* Ensure it's above other content */
 }
 
-.arrow-icon {
-  font-size: 30px;
+.svgIcon {
+  width: 12px;
+  transition-duration: 0.3s;
+}
+
+.svgIcon path {
+  fill: white;
+}
+
+.back-to-top-btn:hover {
+  width: 60px; /* Increase the size */
+  height: 60px; /* Increase the size */
+  border-radius: 50%;
+  background-color: rgb(216, 214, 224);
+  align-items: center;
+}
+
+.back-to-top-btn:hover .svgIcon {
+  transition-duration: 0.3s;
+  transform: translateY(-75%);
+}
+
+.back-to-top-btn::before {
+  position: absolute;
+  bottom: -20px;
+  content: "Top";
+  color: white;
+  font-size: 13px;
+  opacity: 1;
+}
+
+.back-to-top-btn:hover::before {
+  font-size: 13px;
+  opacity: 1;
+  bottom: unset;
+  /* transform: translateY(-30px); */
+  transition-duration: 0.3s;
 }
 
 
@@ -410,6 +449,7 @@ body {
 
   .menu-content{
     /* display: none; */
+    border: 2px solid salmon;
   }
 
   .menu-content.active{
