--- a/client/src/component/Login/LoginPage.css
+++ b/client/src/component/Login/LoginPage.css
@@ -1,221 +1,55 @@
 .login-content {
   display: flex;
+  flex-direction: column;
+  justify-content: center;
   align-items: center;
-  justify-content: space-around;
-  padding: 20px;
+  height: 90vh;
 }
 
-.content-left-logo {
-  padding: 10px;
-  width: 100%;
-}
-
-.login-content-left{
-  /* border: 2px solid black; */
-  height: 45vh;
-  width: 45vw;
-  padding: 18px;
+.content-logo {
   display: flex;
-  justify-content: space-around;
-  flex-direction: column;
-}
-
-.login-description{
-  /* border: 2px solid red; */
-  height: 26vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
+  width: 48vw;
   padding: 15px;
+  box-shadow: rgba(0, 0, 0, 0.05) 0px 1px 2px 0px;
 }
 
-.login-description p {
-  font-family: "Plus Jakarta Sans", sans-serif;
-  font-weight: 400;
-  /* width: 40.5rem; */
-  font-size: 21px;
-  line-height: 28px;
-  color: #000;
+.box-shadow {
+  box-shadow: rgba(0, 0, 0, 0.15) 0px 5px 15px 0px;
+  width: 48%;
+  border-radius: 10px;
 }
 
-.login-description h1{
-  font-size: 40px;
-}
-
-.login-right{
-  /* border: 2px solid red; */
-  display: flex;
-  width: fixed;
-}
-
-.signup-form {
-  /* border: 2px solid rebeccapurple; */
-  border-radius: 15px;
-  width: 40vw;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
-}
-
-.signup-form h2 {
-  /* border: 2px solid yellow; */
-  padding: 15px;
+.box-shadow h2 {
+  font-size: 2rem;
   text-align: center;
+  margin: 15px;
+}
+
+.login-description {
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
 }
 
 .title {
-  color: orange;
+  color: skyblue;
+  font-size: 2.5rem;
 }
 
-.form-group {
-  /* border: 2px solid black; */
-  display: flex;
-  flex-direction: column;
-  padding: 15px;
+.login-description h1 {
+  font-size: 2.2rem;
 }
 
-.label {
-  /* display: block; */
-  font-family: "Poppins", sans-serif;
-  font-weight: 400;
-  font-size: 12px;
-  line-height: 18px;
-  color: #000;
-  margin-bottom: 10px;
-}
-
-.input {
-  width: 100%;
-  padding: 10px 45px 10px 23px;
-  border: 1px solid #cdd5e2;
-  border-radius: 8px;
-  box-sizing: border-box;
-  font-family: "Poppins", sans-serif;
-  font-weight: 300;
-  font-size: 12px;
-  line-height: 18px;
-}
-
-.form {
-  /* border: 2px solid salmon; */
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-  background-color: #ffffff;
-  padding: 30px;
-  width: 30rem;
-  border-radius: 20px;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-}
-
-::placeholder {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-}
-
-.form button {
-  align-self: flex-end;
-}
-
-.flex-column > label {
-  color: #151717;
-  font-weight: 600;
-}
-
-.inputForm {
-  border: 1.5px solid #ecedec;
-  border-radius: 10px;
-  height: 50px;
-  display: flex;
-  align-items: center;
-  padding-left: 10px;
-  transition: 0.2s ease-in-out;
-}
-
-.input {
-  margin-left: 10px;
-  border-radius: 10px;
-  border: none;
-  width: 85%;
-  height: 100%;
-}
-
-.input:focus {
-  outline: none;
-}
-
-.inputForm:focus-within {
-  border: 1.5px solid #2d79f3;
-}
-
-.eye-close{
-  width: 20px;
+.login-description p {
+  font-size: 1.2rem;
+  font-weight: 500;
+  margin: 9px;
 }
 
 .flex-row {
   display: flex;
-  flex-direction: row;
   align-items: center;
-  gap: 10px;
-  justify-content: space-between;
-}
-
-.flex-row > div > label {
-  font-size: 14px;
-  color: black;
-  font-weight: 400;
-}
-
-.span {
-  font-size: 14px;
-  margin-left: 5px;
-  color: #2d79f3;
-  font-weight: 500;
-  cursor: pointer;
-}
-
-.button-submit {
-  margin: 20px 0 10px 0;
-  background-color: #151717;
-  border: none;
-  color: white;
-  font-size: 15px;
-  font-weight: 500;
-  border-radius: 10px;
-  height: 50px;
-  width: 100%;
-  cursor: pointer;
-}
-
-.button-submit:hover {
-  background-color: #252727;
-}
-
-.p {
-  text-align: center;
-  color: black;
-  font-size: 14px;
-  margin: 5px 0;
-}
-
-.btn {
-  margin-top: 10px;
-  width: 100%;
-  height: 50px;
-  border-radius: 10px;
-  display: flex;
+  padding: 15px;
   justify-content: center;
-  align-items: center;
-  font-weight: 500;
-  gap: 10px;
-  border: 1px solid #ededef;
-  background-color: white;
-  cursor: pointer;
-  transition: 0.2s ease-in-out;
-}
-
-.btn:hover {
-  border: 1px solid #2d79f3;
+  gap: 20px;
 }
