--- a/client/src/component/CreateResume/CreateResume.css
+++ b/client/src/component/CreateResume/CreateResume.css
@@ -6,3 +6,10 @@
     /* justify-content: space-between; */
 }
 
+.temp1{
+    /* border: 2px solid black; */
+    padding: 30px;
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+}
